--- a/myApp/package.json
+++ b/myApp/package.json
@@ -14,25 +14,28 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "expo": "latest",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.5",
+    "expo-router": "^5.1.6",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.62.0",
     "react-native": "0.79.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "@react-native-picker/picker": "2.11.1"
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
