--- a/myApp/package.json
+++ b/myApp/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native": "^7.1.17",
     "axios": "^1.12.2",
     "clipboard": "^2.0.11",
-    "expo": "latest",
+    "expo": "^54.0.0",
     "expo-clipboard": "~7.1.5",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
