--- a/myApp/app.json
+++ b/myApp/app.json
@@ -7,27 +7,32 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-
     "splash": {
+      "image": "./assets/images/splashscreen_logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#F0F4F3"
+      
     },
-
     "ios": {
       "supportsTablet": true
     },
-
     "android": {
       "edgeToEdgeEnabled": true,
       "adaptiveIcon": {
         "backgroundColor": "#F0F4F3"
-      }
+      },
+      "package": "com.lanapraca.myApp"
     },
-
     "web": {
       "bundler": "metro"
     },
-
-    "assetBundlePatterns": ["**/*"]
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "e384b6de-c8e7-4c0a-b4a0-14ba44b6ffca"
+      }
+    }
   }
 }
