--- a/myApp/package.json
+++ b/myApp/package.json
@@ -7,6 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build-android": "eas build -p android --profile preview",
     "test": "jest --watchAll"
   },
   "jest": {
