--- a/myApp/package.json
+++ b/myApp/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build-android": "eas build -p android --profile preview",
+    "build:android": "dotenv cross-env-shell \"npx eas build -p android --profile preview --non-interactive\"",
     "test": "jest --watchAll"
   },
   "jest": {
@@ -47,6 +47,9 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
+    "cross-env": "^10.1.0",
+    "dotenv-cli": "^10.0.0",
+    "eas-cli": "^16.20.0",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.12",
     "react-test-renderer": "19.0.0",
