--- a/myApp/.env
+++ b/myApp/.env
@@ -1,2 +1,6 @@
 EXPO_TOKEN=TrDEoQAykecGvqQrye557AUiHJMqYGwIKp4sfvNc 
 EAS_BUILD_AUTOMATION=true
+EXPO_PUBLIC_API_URL=https://api.suaapp.com
+EXPO_PUBLIC_API_URL_DEV=http://127.0.0.1:7009/api
+EXPO_PUBLIC_API_PORT =7009
+EXPO_PUBLIC_API_LAN=127.0.0.1
